Example of EAR with skinny wars and subdeployments