@@ -12,4 +12,91 @@
   <artifactId>ear</artifactId>
   <packaging>ear</packaging>
 
+  <properties>
+    <failOnMissingWebXml>false</failOnMissingWebXml>
+    <!-- Plugin versions -->
+    <version.liberty-maven-plugin>3.1</version.liberty-maven-plugin>
+    <version.maven-failsafe-plugin>2.22.2</version.maven-failsafe-plugin>
+    <version.maven-ear-plugin>3.0.2</version.maven-ear-plugin>
+    <version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
+  </properties>
+
+  <dependencies>
+
+    <!-- shared module: common part between war and ear modules -->
+    <dependency>
+      <artifactId>shared</artifactId>
+      <groupId>com.rednavis</groupId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <artifactId>ejb-impl</artifactId>
+      <groupId>com.rednavis</groupId>
+      <version>1.0-SNAPSHOT</version>
+      <type>ejb</type>
+    </dependency>
+
+    <!-- war -->
+    <dependency>
+      <artifactId>webapp</artifactId>
+      <groupId>com.rednavis</groupId>
+      <version>1.0-SNAPSHOT</version>
+      <type>war</type>
+    </dependency>
+
+  </dependencies>
+
+  <build>
+    <finalName>${project.artifactId}</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-ear-plugin</artifactId>
+        <version>${version.maven-ear-plugin}</version>
+        <configuration>
+          <modules>
+            <jarModule>
+              <groupId>com.rednavis</groupId>
+              <artifactId>shared</artifactId>
+            </jarModule>
+            <ejbModule>
+              <groupId>com.rednavis</groupId>
+              <artifactId>ejb-impl</artifactId>
+            </ejbModule>
+            <webModule>
+              <groupId>com.rednavis</groupId>
+              <artifactId>webapp</artifactId>
+            </webModule>
+          </modules>
+        </configuration>
+      </plugin>
+
+      <!-- https://tomee.apache.org/tomee-8.0/docs/developer/tools/maven/tomee.html -->
+      <!-- http://tomee.apache.org/tomee-maven-plugin.html -->
+      <!--<plugin>
+        <groupId>org.apache.tomee.maven</groupId>
+        <artifactId>tomee-maven-plugin</artifactId>
+        <version>8.0.1</version>
+        <configuration>
+          <apps>
+            <app>
+              com.rednavis:ear:1.0-SNAPSHOT:ear
+            </app>
+          </apps>
+          <reloadOnUpdate>true</reloadOnUpdate>
+          <tomeeClassifier>plume</tomeeClassifier>
+          <synchronization>
+            <extensions>
+              <extension>.class</extension>
+            </extensions>
+          </synchronization>
+          <args>-Xmx1024m -XX:PermSize=256m</args>
+          <removeDefaultWebapps>true</removeDefaultWebapps>
+        </configuration>
+      </plugin>-->
+
+    </plugins>
+  </build>
+
 </project>
